[package]
name = "egg-nog"
version = "0.1.0"
authors = ["Christian Berentsen <jc.berentsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = "0.6.0"
env_logger = {version = "0.7", default-features = false}
ordered-float = "2.0.1"
